# quvis

./: .dockerignore  .gitignore  .prettierrc  25q_circuit.qasm  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  USAGE_EXAMPLE.md  approx_states.npz  docker-compose.prod.yml  docker-compose.yml  grover_compiler.py  index.html  jest.config.js  main.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  qft_viz_data.json  render.yaml  style.css  tsconfig.json  update_circuits.sh  vite.config.ts
__tests__/: BlochSphere.test.ts  Heatmap.test.ts  Playground.test.ts  Qubit.test.ts  QubitGrid.test.ts  Slice.test.ts  State.test.ts  Timeline.test.ts  main.test.ts  npzLoader.test.ts
coverage/: coverage-final.json  index.html
docs/: CI-CD-Pipeline.md
examples/: ghz_analysis.py  library_usage.py  modular_demo.py  qft_analysis.py  qft_modular_demo.py  (+3 more)
quvis-algorithm-generator/: README.md  check_npz.py  compiler_utils.py  coupling_map_generator.py  generate_qft_diagram.py  ghz_compiler.py  grover_compiler.py  h25.py  ibmq.py  pyproject.toml  qaoa_compiler.py  qft_compiler.py  qft_viz_data.npz  thesis_qft_compilation.py
quvis-algorithm-generator/coupling-maps/: grid_100x100.json  grid_12x12.json  grid_20x20.json  grid_3d_2x2x2.json  grid_40x40.json  grid_50x50.json  grid_55x55.json  grid_65x65.json  grid_70x70.json  grid_90x90.json  heavy_hex_33x33.json  heavy_hex_35x35.json  heavy_hex_35x36.json  heavy_hex_36x35.json  heavy_hex_50x50.json  ring_20q.json
quvis-algorithm-generator/notes/: qubit_transpiler_stages.md
(+180 files in other folders)
