[tool.poetry]
name = "quvis"
version = "0.28.0"
description = "Quvis - Quantum Circuit Visualization System"
authors = ["Alejandro Gonzalvo Hidalgo <alejandro@gonzalvo.org>"]
readme = "README.md"
packages = [{include = "quvis", from = "quvis/core/src"}]
include = ["quvis/web/**/*"]

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^2.1.0"
numpy = "^1.24.0"
ipykernel = "^6.29.5"
pillow = "^11.3.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "quvis/core/src"
mypy_path = "quvis/core/src"
explicit_package_bases = true
exclude = ["quvis/web", "paper"]
disable_error_code = "import-untyped"

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "qiskit_aer.*",
    "matplotlib",
    "matplotlib.*"
]
ignore_missing_imports = true 