[tool.poetry]
name = "quvis-algorithm-generator"
version = "0.1.0"
description = ""
authors = ["Alejandro Gonzalvo Hidalgo <alejandro.gonzalvo.hidalgo@cern.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
